# harness_eng

./: .gitattributes  HARNESSES_FROZEN.md  README.md  _config.yml  index.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-audit-and-harden-scaffold/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-RESEARCH.md
.planning/phases/02-methodology-freeze/: 02-01-PLAN.md
.planning/phases/03-multi-seed-and-stats/: 03-01-PLAN.md
.planning/phases/04-manifests-and-allowlist/: 04-01-PLAN.md
.planning/phases/07-ci-and-onboarding/: 07-01-PLAN.md
.planning/phases/08-expand-harness-family/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  08-04-PLAN.md  08-05-PLAN.md  08-06-PLAN.md  08-06-SUMMARY.md  08-07-PLAN.md  08-08-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: demo_matrix.py  estimate_cost.py  make_chart.py  run_code_benchmark.py  run_full.py  run_pilot.py  verify_streaming_ollama.py
src/harness_eng/: analysis.py  grader.py  model.py  runner.py  tools.py
tests/: test_code_tasks.py  test_freeze_gate.py  test_harness_registry.py  test_model_usage.py  test_multi_agent.py  test_react_with_replan.py  test_run_manifest.py  test_self_consistency.py  test_stats.py  test_tool_allowlist.py  test_tool_use_with_validation.py  test_tools.py  test_trace_summary.py
writeup/: article-glm-20260423.md  article-linkedin.md  article-medium.html  article.md  hero-prompt.md  linkedin-article.md  linkedin-post.md
(+16 files in other folders)
