[project]
name = "harness-eng"
version = "0.1.0"
description = "Same model, five harnesses, one benchmark."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
